--- a/portfolio.html
+++ b/portfolio.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Portfolio</title>
+    <title>Real-Time Weight Data</title>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log('DOM fully loaded and parsed');
+
+            // Your web app's Firebase configuration
+            const firebaseConfig = {
+                apiKey: "AIzaSyCENwRUTdGb7oa2ymsSGs2TDvN0z-aQIvA",
+                authDomain: "esp32-c72b0.firebaseapp.com",
+                databaseURL: "https://esp32-c72b0-default-rtdb.firebaseio.com",
+                projectId: "esp32-c72b0",
+                storageBucket: "esp32-c72b0.appspot.com",
+                messagingSenderId: "1035271337480",
+                appId: "1:1035271337480:web:4b4b43b6f518f1adfa83bd",
+                measurementId: "G-ERER2ESDC3"
+            };
+
+            console.log('Firebase config:', firebaseConfig);
+
+            // Initialize Firebase
+            const app = firebase.initializeApp(firebaseConfig);
+            const database = firebase.database();
+
+            console.log('Firebase initialized:', app);
+
+            function fetchData() {
+                console.log('Fetching data...');
+                const weightRef = database.ref('/weight');
+                weightRef.on('value', (snapshot) => {
+                    const data = snapshot.val();
+                    console.log('Data from Firebase:', data);
+                    document.getElementById('weight').innerText = 'Weight: ' + data + ' kg';
+                }, (error) => {
+                    console.error('Error fetching data:', error);
+                });
+            }
+
+            fetchData();
+        });
+    </script>
 </head>
 <body>
-	<header>
-		<h1>My Portfolio</h1>
-	</header>
-
-	<main>
-		<section>
-			<h2>Project 1</h2>
-			<p>Description of project 1 goes here.</p>
-		</section>
-
-		<section>
-			<h2>Project 2</h2>
-			<p>Description of project 2 goes here.</p>
-		</section>
-
-		<section>
-			<h2>Project 3</h2>
-			<p>Description of project 3 goes here.</p>
-		</section>
-	</main>
-
-	<footer>
-		<p>&copy; 2023 My Portfolio</p>
-	</footer>
+    <h1>Real-Time Weight Data</h1>
+    <div id="weight">Fetching weight...</div>
 </body>
 </html>
